# algo-1

./: .gitignore  README.md
ejercicios/: CMakeLists.txt  main.cpp  p7.cpp  p7.h  p8.cpp  p8.h  ps.h  utilidades.cpp  utilidades.h
taller/: copia_intro_latex.tex
taller/Ejercicios/: labo00.cpp  labo00_ejecutable
taller/Labo04-Vectores/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
taller/invariante/: CMakeLists.txt  ejercicios.cpp  main.cpp
taller/labo00/: CMakeLists.txt  labo00.cpp
taller/labo01/: CMakeLists.txt  labo01.cpp
taller/tests/: CMakeLists.txt
taller/tests/src/ej2/: llenarTaxis.cpp  llenarTaxis.h
taller/tests/src/ej3/: baldosasDelPiso.cpp  contandoDragones.cpp  sandia.cpp  sandia.h
taller/tests/test/ej1/: esPrimoTEST.cpp
taller/tests/test/ej2/: llenarTaxisTEST.cpp  puntajeTEST.cpp
taller/tests/test/ej3/: baldosasDelPisoTEST.cpp  contandoDragonesTEST.cpp  sandiaTEST.cpp
temp-tp1/: Algo1Macros.tex  main.tex
tp1/: Algo1Macros.tex  main.tex
